--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "gifted-baileys": "^1.0.0",
+    "gifted-baileys": "latest",
     "pino": "^8.17.2",
     "qrcode": "^1.5.3"
   }
