--- a/package.json
+++ b/package.json
@@ -1,15 +1,26 @@
 {
-  "name": "whatsapp-pairing-system",
-  "version": "1.0.0",
-  "description": "Simple WhatsApp Pairing System",
+  "name": "megan-md-sessions",
+  "description": "MEGAN-MD Multi-Device WhatsApp Session Generator",
   "main": "index.js",
+  "engines": {
+    "npm": ">=9.7.2",
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "start": "node index.js"
   },
+  "author": "Wanga",
+  "license": "GPL-3.0 license",
   "dependencies": {
-    "express": "^4.18.2",
-    "gifted-baileys": "latest",
-    "pino": "^8.17.2",
-    "qrcode": "^1.5.3"
+    "@whiskeysockets/baileys": "^6.5.0",
+    "maher-zubair-baileys": "^6.6.5",
+    "qrcode": "^1.5.3",
+    "awesome-phonenumber": "^2.64.0",
+    "pino": "^8.1.0",
+    "phone": "3.1.30",
+    "body-parser": "^1.20.1",
+    "pastebin-js": "^1.0.6",
+    "express": "^4.18.1",
+    "path": "^0.12.7"
   }
 }
